# EnumGroup

./: .appveyor.yml  .travis.yml  CMakeLists.txt  EnumGroup.h  ForEachMacro.h  README.md  helpers.cmake  test_entity.h  tests.cpp
cmake/: EnumGroupConfig.cmake  helpers.cmake
src/: EnumGroup.h  ForEachMacro.h
test/: test_entity.h  tests.cpp
